Eslint aproval JS

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,9 +27,17 @@
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
     "jest/prefer-to-have-length": "warn",
-
     "jest/valid-expect": "error",
-    "no-plusplus": "off"
-  },
-  "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
+    "no-console": "off",
+    "no-alert": "off",
+    "object-curly-newline": "off",
+    "prefer-regex-literals": "off",
+    "implicit-arrow-linebreak": "off",
+    "operator-linebreak": "off",
+    "no-promise-executor-return": "off",
+    "no-throw-literal": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
+  }
+
 }
